# MennyGit

./: .gitignore  CMakeLists.txt
.github/: copilot-instructions.md
ds/: CMakeLists.txt
ds/inc/: generic_stack.hpp
ds/tst/: generic_stack_test.cpp
projects/FPL_squad_picker/: CMakelists.txt  main.cpp
projects/FPL_squad_picker/data/: fpl.db
projects/FPL_squad_picker/inc/: database.h  fpl_client.h  player.h
projects/FPL_squad_picker/src/: database.cpp  fpl_client.cpp
tutorials/: CMakeLists.txt
tutorials/boost_asio/: CMakeLists.txt
tutorials/boost_asio/inc/: beginer_ex.hpp
tutorials/boost_asio/src/: beginer_ex.cpp
tutorials/boost_asio/tst/: beginer_ex_test.cpp
utils/: CMakeLists.txt
utils/inc/: test_utils.hpp
